--- a/.github/workflows/vulnerable.yml
+++ b/.github/workflows/vulnerable.yml
@@ -1,23 +1,23 @@
-name: my action
-on: pull_request_target
+# name: my action
+# on: pull_request_target
 
-jobs:
-  pr-check: 
-    name: Check PR
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup Action
-        uses: actions/checkout@v3
-        with:
-          ref: ${{github.event.pull_request.head.ref}}
-          repository: ${{github.event.pull_request.head.repo.full_name}}
-      - name: Setup Python 3.10
-        uses: actions/setup-python@v3
-        with:
-          python-version: 3.10
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-      - name: some command
-        run: some_command
-        env:
-          SOME_SECRET: ${{ secrets.SOME_SECRET }}
+# jobs:
+#   pr-check: 
+#     name: Check PR
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Setup Action
+#         uses: actions/checkout@v3
+#         with:
+#           ref: ${{github.event.pull_request.head.ref}}
+#           repository: ${{github.event.pull_request.head.repo.full_name}}
+#       - name: Setup Python 3.10
+#         uses: actions/setup-python@v3
+#         with:
+#           python-version: 3.10
+#       - name: Install dependencies
+#         run: pip install -r requirements.txt
+#       - name: some command
+#         run: some_command
+#         env:
+#           SOME_SECRET: ${{ secrets.SOME_SECRET }}
